[gd_scene load_steps=48 format=3 uid="uid://udywtbcwhuj1"]

[ext_resource type="Script" uid="uid://du1sb26rpgork" path="res://device/device.gd" id="1_5u0yl"]
[ext_resource type="PackedScene" uid="uid://bxgg1k0vh82t6" path="res://device/link_device_sprite.tscn" id="2_2w885"]
[ext_resource type="Script" uid="uid://cqbjnned5i21h" path="res://device/game_area.gd" id="3_04b0e"]
[ext_resource type="PackedScene" uid="uid://bmm1qb4b40sv3" path="res://objects/instanced_scenes/meat.tscn" id="4_qk4hv"]
[ext_resource type="Script" uid="uid://b8s2phau8u2bl" path="res://script_templates/timer/solo_timer.gd" id="5_0s1ah"]
[ext_resource type="Script" uid="uid://ecko5m6yd7tk" path="res://vfx_system/vfx_manager.gd" id="6_7tnq8"]
[ext_resource type="PackedScene" uid="uid://cbv2ueyv0kgaj" path="res://vfx_system/effect_tscns/dust_cloud_vfx.tscn" id="7_6uw0p"]
[ext_resource type="Texture2D" uid="uid://cxfiu12hvqate" path="res://assets/art/aesprite/device/game_background.png" id="8_5u0yl"]
[ext_resource type="Script" uid="uid://dxkor68c3q6xw" path="res://device/background.gd" id="9_5xc8b"]
[ext_resource type="Script" uid="uid://bdgxms5h5rrmh" path="res://ui/heart_bar.gd" id="10_g2vwl"]
[ext_resource type="Texture2D" uid="uid://drrgqpmwm5jkv" path="res://assets/art/aesprite/ui/heart_sheet.png" id="11_ofcv6"]
[ext_resource type="SpriteFrames" uid="uid://b6u6tkw1fg2y1" path="res://assets/animation_frames/icons/food_icon_frames.tres" id="12_lwr14"]
[ext_resource type="Theme" uid="uid://dg8innd23voq6" path="res://ui/fonts/meter_label_theme.tres" id="14_veqju"]
[ext_resource type="Theme" uid="uid://de6apglbak7x" path="res://ui/themes/menu_panel_theme.tres" id="15_ul75l"]
[ext_resource type="Script" uid="uid://mlrgiwxtdve8" path="res://ui/menu_buttons/mini_menu.gd" id="16_v38ai"]
[ext_resource type="Script" uid="uid://p3okne6hp81h" path="res://ui/menu_buttons/button_container.gd" id="17_ck7l0"]
[ext_resource type="Texture2D" uid="uid://c3xvls1ve8hes" path="res://assets/art/aesprite/ui/menu/mini_menu.png" id="18_wxf5w"]
[ext_resource type="PackedScene" uid="uid://dlf22tttashco" path="res://ui/menu_buttons/instanced_scenes/icon_menu_button.tscn" id="19_8u400"]
[ext_resource type="SpriteFrames" uid="uid://dddluc0c1v18a" path="res://assets/animation_frames/icons/joy_icon_frames.tres" id="20_r0hmh"]
[ext_resource type="Texture2D" uid="uid://b6yl5vxvjayev" path="res://assets/art/aesprite/ui/icons/stats_icon_sheet.png" id="21_tl481"]
[ext_resource type="Script" uid="uid://ye7iwxpmjwk8" path="res://ui/menu_buttons/stat_menu.gd" id="22_k7vqq"]
[ext_resource type="Texture2D" uid="uid://xd8t0vofxvf2" path="res://assets/art/aesprite/ui/menu/blank_menu.png" id="23_t3ton"]
[ext_resource type="Texture2D" uid="uid://bxr5yokgonqa" path="res://assets/art/aesprite/Pets/unknown_pet.png" id="24_dg2vs"]
[ext_resource type="Script" uid="uid://df4iocisercox" path="res://ui/menu_buttons/play_menu.gd" id="25_0gch6"]
[ext_resource type="PackedScene" uid="uid://cxps8l5sseo8p" path="res://games/guess/guess_game.tscn" id="26_5qrur"]
[ext_resource type="PackedScene" uid="uid://do4loav2wlxtb" path="res://games/fish/fishing_game.tscn" id="27_fqxdl"]
[ext_resource type="PackedScene" uid="uid://yp44rtci20n4" path="res://games/jump/jump_game.tscn" id="28_b7mkj"]
[ext_resource type="PackedScene" uid="uid://cxqir2rb1dcdk" path="res://games/hit/hit_game.tscn" id="29_1gro0"]
[ext_resource type="PackedScene" uid="uid://cqe77tkk23q1s" path="res://games/endure/endure_game.tscn" id="30_g6ycs"]
[ext_resource type="PackedScene" uid="uid://bvwfcurkdlx7v" path="res://ui/menu_buttons/instanced_scenes/label_button.tscn" id="31_45ni2"]
[ext_resource type="Script" uid="uid://dnnsmlvm8ay0a" path="res://pets/pet_manager.gd" id="32_kagdc"]
[ext_resource type="PackedScene" uid="uid://cjw6oamscwe62" path="res://pets/pet.tscn" id="33_lyjso"]
[ext_resource type="Resource" uid="uid://c5hcs487cgau8" path="res://data/pet_resources/stage_0/buh_egg.tres" id="34_cijat"]
[ext_resource type="Script" uid="uid://fkrivjuc8tmt" path="res://pets/pet_evolve_sequence.gd" id="35_071hk"]

[sub_resource type="Animation" id="Animation_xm6xn"]
length = 0.001

[sub_resource type="Animation" id="Animation_2ni51"]
resource_name = "SpawnDevice"
length = 2.6

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lwd8q"]
_data = {
&"RESET": SubResource("Animation_xm6xn"),
&"SpawnDevice": SubResource("Animation_2ni51")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_csey4"]
atlas = ExtResource("11_ofcv6")
region = Rect2(0, 0, 7, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_xq778"]
atlas = ExtResource("11_ofcv6")
region = Rect2(14, 0, 7, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_5u0yl"]
atlas = ExtResource("11_ofcv6")
region = Rect2(7, 0, 7, 7)

[sub_resource type="SpriteFrames" id="SpriteFrames_kvm0p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_csey4")
}],
"loop": true,
"name": &"Empty",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xq778")
}],
"loop": true,
"name": &"Full",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5u0yl")
}],
"loop": true,
"name": &"Half Full",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_2w885"]
atlas = ExtResource("21_tl481")
region = Rect2(9, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_04b0e"]
atlas = ExtResource("21_tl481")
region = Rect2(0, 0, 9, 9)

[sub_resource type="SpriteFrames" id="SpriteFrames_qk4hv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2w885")
}],
"loop": true,
"name": &"Selected",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_04b0e")
}],
"loop": true,
"name": &"Unselected",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_6jpmp"]
radius = 8.0

[sub_resource type="Animation" id="Animation_j742v"]
resource_name = "evolve_sequence_anim"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EvolvingPet/PreviousEvolution:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EvolvingPet/NextEvolution:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EvolvingPet")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&""],
"method": &"_incrementSequence"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fmrrl"]
_data = {
&"evolve_sequence_anim": SubResource("Animation_j742v")
}

[node name="Device" type="Node2D" node_paths=PackedStringArray("_gameArea", "_animator")]
process_mode = 1
script = ExtResource("1_5u0yl")
_gameArea = NodePath("GameArea")
_animator = NodePath("AnimationPlayer")
shakeDegreeMax = 11.0
hopHeight = Vector2(0, -30)
hopDuration = 0.25
chatSpeed = 0.1
metadata/_edit_group_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_lwd8q")
}

[node name="GameArea" type="Node2D" parent="." node_paths=PackedStringArray("device", "objectContainer", "petManager", "menuManager", "boundries", "ObjectSpawnLocations")]
position = Vector2(0, -232)
script = ExtResource("3_04b0e")
device = NodePath("..")
objectContainer = NodePath("ObjectContainer")
petManager = NodePath("PetManager")
menuManager = NodePath("MenuManager")
boundries = [NodePath("PetManager/Markers/LeftBoundry"), NodePath("PetManager/Markers/RightBoundry")]
ObjectSpawnLocations = [NodePath("PetManager/Markers/SpawnLocation0"), NodePath("PetManager/Markers/SpawnLocation1"), NodePath("PetManager/Markers/SpawnLocation2"), NodePath("PetManager/Markers/SpawnLocation3")]
foodInstance = ExtResource("4_qk4hv")
metadata/_edit_lock_ = true

[node name="GameTimers" type="Node" parent="GameArea"]

[node name="HungerTimer" type="Timer" parent="GameArea/GameTimers"]
script = ExtResource("5_0s1ah")

[node name="JoyTimer" type="Timer" parent="GameArea/GameTimers"]
script = ExtResource("5_0s1ah")

[node name="EvolveTimer" type="Timer" parent="GameArea/GameTimers"]
script = ExtResource("5_0s1ah")

[node name="GameVFX" type="Node2D" parent="GameArea"]
z_index = 1
script = ExtResource("6_7tnq8")
_effectArray = Array[PackedScene]([ExtResource("7_6uw0p")])
_isForGameArea = true

[node name="BackdropSprite" type="Sprite2D" parent="GameArea"]
z_index = -10
z_as_relative = false
position = Vector2(0, 174)
texture = ExtResource("8_5u0yl")
metadata/_edit_lock_ = true

[node name="MenuManager" type="Node2D" parent="GameArea" node_paths=PackedStringArray("miniMenu", "statMenu", "playMenu")]
script = ExtResource("9_5xc8b")
miniMenu = NodePath("Menu/MiniMenu")
statMenu = NodePath("Menu/StatMenu")
playMenu = NodePath("Menu/PlayMenu")
metadata/_edit_lock_ = true

[node name="StatusBars" type="Node2D" parent="GameArea/MenuManager"]

[node name="Hungerbar" type="Node2D" parent="GameArea/MenuManager/StatusBars"]
position = Vector2(-27, 147)
script = ExtResource("10_g2vwl")
metadata/_edit_group_ = true

[node name="Heart1" type="AnimatedSprite2D" parent="GameArea/MenuManager/StatusBars/Hungerbar"]
sprite_frames = SubResource("SpriteFrames_kvm0p")
animation = &"Empty"
offset = Vector2(3.5, 3.5)

[node name="Heart2" type="AnimatedSprite2D" parent="GameArea/MenuManager/StatusBars/Hungerbar"]
position = Vector2(6, 0)
sprite_frames = SubResource("SpriteFrames_kvm0p")
animation = &"Empty"
offset = Vector2(3.5, 3.5)

[node name="Heart3" type="AnimatedSprite2D" parent="GameArea/MenuManager/StatusBars/Hungerbar"]
position = Vector2(12, 0)
sprite_frames = SubResource("SpriteFrames_kvm0p")
animation = &"Empty"
offset = Vector2(3.5, 3.5)

[node name="Heart4" type="AnimatedSprite2D" parent="GameArea/MenuManager/StatusBars/Hungerbar"]
position = Vector2(18, 0)
sprite_frames = SubResource("SpriteFrames_kvm0p")
animation = &"Empty"
offset = Vector2(3.5, 3.5)

[node name="JoyBar" type="Node2D" parent="GameArea/MenuManager/StatusBars"]
position = Vector2(20, 147)
script = ExtResource("10_g2vwl")
metadata/_edit_group_ = true

[node name="Heart1" type="AnimatedSprite2D" parent="GameArea/MenuManager/StatusBars/JoyBar"]
sprite_frames = SubResource("SpriteFrames_kvm0p")
animation = &"Empty"
offset = Vector2(3.5, 3.5)

[node name="Heart2" type="AnimatedSprite2D" parent="GameArea/MenuManager/StatusBars/JoyBar"]
position = Vector2(-6, 0)
sprite_frames = SubResource("SpriteFrames_kvm0p")
animation = &"Empty"
offset = Vector2(3.5, 3.5)

[node name="Heart3" type="AnimatedSprite2D" parent="GameArea/MenuManager/StatusBars/JoyBar"]
position = Vector2(-12, 0)
sprite_frames = SubResource("SpriteFrames_kvm0p")
animation = &"Empty"
offset = Vector2(3.5, 3.5)

[node name="Heart4" type="AnimatedSprite2D" parent="GameArea/MenuManager/StatusBars/JoyBar"]
position = Vector2(-18, 0)
sprite_frames = SubResource("SpriteFrames_kvm0p")
animation = &"Empty"
offset = Vector2(3.5, 3.5)

[node name="HungerIcon" type="AnimatedSprite2D" parent="GameArea/MenuManager/StatusBars"]
position = Vector2(-26, 153)
sprite_frames = ExtResource("12_lwr14")
animation = &"Unselected"
offset = Vector2(4.5, 4.5)

[node name="JoyIcon" type="AnimatedSprite2D" parent="GameArea/MenuManager/StatusBars"]
position = Vector2(17, 153)
sprite_frames = ExtResource("20_r0hmh")
animation = &"Unselected"
offset = Vector2(4.5, 4.5)

[node name="Menu" type="Node2D" parent="GameArea/MenuManager"]

[node name="MiniMenu" type="Node2D" parent="GameArea/MenuManager/Menu" node_paths=PackedStringArray("buttonController")]
z_index = 1
position = Vector2(0, 195)
script = ExtResource("16_v38ai")
buttonController = NodePath("ButtonController")

[node name="ButtonController" type="Node" parent="GameArea/MenuManager/Menu/MiniMenu" node_paths=PackedStringArray("buttonArray")]
script = ExtResource("17_ck7l0")
buttonArray = [NodePath("../Feed"), NodePath("../Play"), NodePath("../Stats")]

[node name="MiniMenuSprite" type="Sprite2D" parent="GameArea/MenuManager/Menu/MiniMenu"]
texture = ExtResource("18_wxf5w")

[node name="Feed" parent="GameArea/MenuManager/Menu/MiniMenu" instance=ExtResource("19_8u400")]
position = Vector2(-27, -5)

[node name="Play" parent="GameArea/MenuManager/Menu/MiniMenu" instance=ExtResource("19_8u400")]
position = Vector2(-9, -5)

[node name="OptionIcon" parent="GameArea/MenuManager/Menu/MiniMenu/Play" index="1"]
sprite_frames = ExtResource("20_r0hmh")
offset = Vector2(0, 0)

[node name="Stats" parent="GameArea/MenuManager/Menu/MiniMenu" instance=ExtResource("19_8u400")]
position = Vector2(9, -5)

[node name="OptionIcon" parent="GameArea/MenuManager/Menu/MiniMenu/Stats" index="1"]
sprite_frames = SubResource("SpriteFrames_qk4hv")

[node name="StatMenu" type="Panel" parent="GameArea/MenuManager/Menu"]
visible = false
z_index = 1
offset_left = -112.0
offset_top = -112.0
offset_right = 112.0
offset_bottom = 112.0
theme = ExtResource("15_ul75l")
script = ExtResource("22_k7vqq")

[node name="BlankMenuSprite" type="Sprite2D" parent="GameArea/MenuManager/Menu/StatMenu"]
position = Vector2(112, 112)
scale = Vector2(4, 4)
texture = ExtResource("23_t3ton")
metadata/_edit_lock_ = true

[node name="Name" type="Label" parent="GameArea/MenuManager/Menu/StatMenu"]
layout_mode = 0
offset_left = 104.0
offset_top = 144.0
offset_right = 208.0
offset_bottom = 176.0
theme = ExtResource("14_veqju")
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Display Sprite" type="Sprite2D" parent="GameArea/MenuManager/Menu/StatMenu"]
position = Vector2(152, 144)
scale = Vector2(4, 4)
texture = ExtResource("24_dg2vs")
offset = Vector2(0, -8)

[node name="EvoHist0" type="Sprite2D" parent="GameArea/MenuManager/Menu/StatMenu/Display Sprite"]
position = Vector2(-12, -20)
scale = Vector2(0.5, 0.5)
texture = ExtResource("24_dg2vs")
offset = Vector2(0, -8)

[node name="EvoHist1" type="Sprite2D" parent="GameArea/MenuManager/Menu/StatMenu/Display Sprite"]
position = Vector2(-4, -20)
scale = Vector2(0.5, 0.5)
texture = ExtResource("24_dg2vs")
offset = Vector2(0, -8)

[node name="EvoHist2" type="Sprite2D" parent="GameArea/MenuManager/Menu/StatMenu/Display Sprite"]
position = Vector2(4, -20)
scale = Vector2(0.5, 0.5)
texture = ExtResource("24_dg2vs")
offset = Vector2(0, -8)

[node name="EvoHist3" type="Sprite2D" parent="GameArea/MenuManager/Menu/StatMenu/Display Sprite"]
position = Vector2(12, -20)
scale = Vector2(0.5, 0.5)
texture = ExtResource("24_dg2vs")
offset = Vector2(0, -8)

[node name="Personality" type="Label" parent="GameArea/MenuManager/Menu/StatMenu"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 172.0
offset_bottom = 31.0
theme = ExtResource("14_veqju")
text = "Personality: ??????"
vertical_alignment = 1

[node name="Pow" type="Label" parent="GameArea/MenuManager/Menu/StatMenu"]
layout_mode = 0
offset_left = 8.0
offset_top = 40.0
offset_right = 46.0
offset_bottom = 64.0
theme = ExtResource("14_veqju")
text = "POW:"
vertical_alignment = 1

[node name="Value" type="Label" parent="GameArea/MenuManager/Menu/StatMenu/Pow"]
layout_mode = 0
offset_left = 40.0
offset_right = 72.0
offset_bottom = 24.0
theme = ExtResource("14_veqju")
text = "00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="End" type="Label" parent="GameArea/MenuManager/Menu/StatMenu"]
layout_mode = 0
offset_left = 8.0
offset_top = 72.0
offset_right = 48.0
offset_bottom = 96.0
theme = ExtResource("14_veqju")
text = "END:"
vertical_alignment = 1

[node name="Value" type="Label" parent="GameArea/MenuManager/Menu/StatMenu/End"]
layout_mode = 0
offset_left = 40.0
offset_right = 72.0
offset_bottom = 24.0
theme = ExtResource("14_veqju")
text = "00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spd" type="Label" parent="GameArea/MenuManager/Menu/StatMenu"]
layout_mode = 0
offset_left = 8.0
offset_top = 104.0
offset_right = 48.0
offset_bottom = 128.0
theme = ExtResource("14_veqju")
text = "SPD:"
vertical_alignment = 1

[node name="Value" type="Label" parent="GameArea/MenuManager/Menu/StatMenu/Spd"]
layout_mode = 0
offset_left = 40.0
offset_right = 72.0
offset_bottom = 24.0
theme = ExtResource("14_veqju")
text = "00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Bal" type="Label" parent="GameArea/MenuManager/Menu/StatMenu"]
layout_mode = 0
offset_left = 8.0
offset_top = 136.0
offset_right = 48.0
offset_bottom = 160.0
theme = ExtResource("14_veqju")
text = "BAL:"
vertical_alignment = 1

[node name="Value" type="Label" parent="GameArea/MenuManager/Menu/StatMenu/Bal"]
layout_mode = 0
offset_left = 40.0
offset_right = 72.0
offset_bottom = 24.0
theme = ExtResource("14_veqju")
text = "00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayMenu" type="Panel" parent="GameArea/MenuManager/Menu" node_paths=PackedStringArray("buttonController")]
visible = false
z_index = 1
offset_left = -112.0
offset_top = -112.0
offset_right = 112.0
offset_bottom = 112.0
theme = ExtResource("15_ul75l")
script = ExtResource("25_0gch6")
buttonController = NodePath("GameMenu/ButtonController")
miniGameList = Array[PackedScene]([ExtResource("26_5qrur"), ExtResource("27_fqxdl"), ExtResource("28_b7mkj"), ExtResource("29_1gro0"), ExtResource("30_g6ycs")])

[node name="BlankMenuSprite2" type="Sprite2D" parent="GameArea/MenuManager/Menu/PlayMenu"]
position = Vector2(112, 112)
scale = Vector2(4, 4)
texture = ExtResource("23_t3ton")
metadata/_edit_lock_ = true

[node name="GameMenu" type="Panel" parent="GameArea/MenuManager/Menu/PlayMenu"]
layout_mode = 0
offset_right = 224.0
offset_bottom = 224.0
metadata/_edit_lock_ = true

[node name="MenuLabel" type="Label" parent="GameArea/MenuManager/Menu/PlayMenu/GameMenu"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 216.0
offset_bottom = 31.0
theme = ExtResource("14_veqju")
text = "Pick a game!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonController" type="Node" parent="GameArea/MenuManager/Menu/PlayMenu/GameMenu" node_paths=PackedStringArray("buttonArray")]
script = ExtResource("17_ck7l0")
buttonArray = [NodePath("../Guess"), NodePath("../Fish"), NodePath("../Run"), NodePath("../Hit"), NodePath("../Endure"), NodePath("../Exit")]

[node name="Exit" parent="GameArea/MenuManager/Menu/PlayMenu/GameMenu" instance=ExtResource("31_45ni2")]
offset_left = 72.0
offset_top = 144.0
offset_right = 152.0
offset_bottom = 168.0
metadata/_edit_group_ = true

[node name="OptionName" parent="GameArea/MenuManager/Menu/PlayMenu/GameMenu/Exit" index="1"]
text = "Exit"

[node name="Guess" parent="GameArea/MenuManager/Menu/PlayMenu/GameMenu" instance=ExtResource("31_45ni2")]
offset_left = 16.0
offset_top = 32.0
offset_right = 88.0
offset_bottom = 56.0
metadata/_edit_group_ = true

[node name="OptionName" parent="GameArea/MenuManager/Menu/PlayMenu/GameMenu/Guess" index="1"]
text = "Guess!"

[node name="Fish" parent="GameArea/MenuManager/Menu/PlayMenu/GameMenu" instance=ExtResource("31_45ni2")]
offset_left = 136.0
offset_top = 32.0
offset_right = 208.0
offset_bottom = 56.0
metadata/_edit_group_ = true

[node name="OptionName" parent="GameArea/MenuManager/Menu/PlayMenu/GameMenu/Fish" index="1"]
text = "Fish!"

[node name="Run" parent="GameArea/MenuManager/Menu/PlayMenu/GameMenu" instance=ExtResource("31_45ni2")]
offset_left = 16.0
offset_top = 64.0
offset_right = 88.0
offset_bottom = 88.0
metadata/_edit_group_ = true

[node name="OptionName" parent="GameArea/MenuManager/Menu/PlayMenu/GameMenu/Run" index="1"]
text = "Run!"

[node name="Hit" parent="GameArea/MenuManager/Menu/PlayMenu/GameMenu" instance=ExtResource("31_45ni2")]
offset_left = 136.0
offset_top = 64.0
offset_right = 208.0
offset_bottom = 88.0
metadata/_edit_group_ = true

[node name="OptionName" parent="GameArea/MenuManager/Menu/PlayMenu/GameMenu/Hit" index="1"]
text = "Hit!"

[node name="Endure" parent="GameArea/MenuManager/Menu/PlayMenu/GameMenu" instance=ExtResource("31_45ni2")]
offset_left = 16.0
offset_top = 96.0
offset_right = 88.0
offset_bottom = 120.0
metadata/_edit_group_ = true

[node name="OptionName" parent="GameArea/MenuManager/Menu/PlayMenu/GameMenu/Endure" index="1"]
text = "Endure!"

[node name="MiniGameContainer" type="Panel" parent="GameArea/MenuManager/Menu/PlayMenu"]
layout_mode = 0
offset_right = 224.0
offset_bottom = 224.0
metadata/_edit_lock_ = true

[node name="PetManager" type="Node2D" parent="GameArea" node_paths=PackedStringArray("hungerBar", "joyBar", "leftBoundry", "rightBoundry", "petSpawnPoint", "_evolvingPet")]
script = ExtResource("32_kagdc")
hungerBar = NodePath("../MenuManager/StatusBars/Hungerbar")
joyBar = NodePath("../MenuManager/StatusBars/JoyBar")
leftBoundry = NodePath("Markers/LeftBoundry")
rightBoundry = NodePath("Markers/RightBoundry")
respawnPet = ExtResource("33_lyjso")
petSpawnPoint = NodePath("Markers/PetSpawnPoint")
petStartResource = ExtResource("34_cijat")
_evolvingPet = NodePath("EvolvingPet")
_evolveSequenceRate = 1.05

[node name="Markers" type="Node2D" parent="GameArea/PetManager"]
metadata/_edit_lock_ = true

[node name="PetSpawnPoint" type="Marker2D" parent="GameArea/PetManager/Markers"]
position = Vector2(0, 32)
metadata/_edit_lock_ = true

[node name="LeftBoundry" type="Marker2D" parent="GameArea/PetManager/Markers"]
position = Vector2(-88, 32)
gizmo_extents = 64.0

[node name="RightBoundry" type="Marker2D" parent="GameArea/PetManager/Markers"]
position = Vector2(88, 32)
gizmo_extents = 64.0

[node name="SpawnLocation0" type="Marker2D" parent="GameArea/PetManager/Markers"]
position = Vector2(-72, -48)

[node name="SpawnLocation1" type="Marker2D" parent="GameArea/PetManager/Markers"]
position = Vector2(-32, -48)

[node name="SpawnLocation2" type="Marker2D" parent="GameArea/PetManager/Markers"]
position = Vector2(32, -48)

[node name="SpawnLocation3" type="Marker2D" parent="GameArea/PetManager/Markers"]
position = Vector2(72, -48)

[node name="FoodColliders" type="Node2D" parent="GameArea/PetManager"]

[node name="SpawnCollider0" type="Area2D" parent="GameArea/PetManager/FoodColliders"]
position = Vector2(-72, -48)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameArea/PetManager/FoodColliders/SpawnCollider0"]
shape = SubResource("CircleShape2D_6jpmp")

[node name="SpawnCollider1" type="Area2D" parent="GameArea/PetManager/FoodColliders"]
position = Vector2(-32, -48)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameArea/PetManager/FoodColliders/SpawnCollider1"]
shape = SubResource("CircleShape2D_6jpmp")

[node name="SpawnCollider2" type="Area2D" parent="GameArea/PetManager/FoodColliders"]
position = Vector2(32, -48)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameArea/PetManager/FoodColliders/SpawnCollider2"]
shape = SubResource("CircleShape2D_6jpmp")

[node name="SpawnCollider3" type="Area2D" parent="GameArea/PetManager/FoodColliders"]
position = Vector2(72, -48)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameArea/PetManager/FoodColliders/SpawnCollider3"]
shape = SubResource("CircleShape2D_6jpmp")

[node name="EvolvingPet" type="Node2D" parent="GameArea/PetManager" node_paths=PackedStringArray("_previousEvo", "_nextEvo")]
visible = false
position = Vector2(-304, -408)
script = ExtResource("35_071hk")
_previousEvo = NodePath("PreviousEvolution")
_nextEvo = NodePath("NextEvolution")

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameArea/PetManager/EvolvingPet"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_fmrrl")
}

[node name="PreviousEvolution" type="Sprite2D" parent="GameArea/PetManager/EvolvingPet"]
scale = Vector2(3, 3)
offset = Vector2(0, -8)

[node name="NextEvolution" type="Sprite2D" parent="GameArea/PetManager/EvolvingPet"]
visible = false
scale = Vector2(3, 3)
offset = Vector2(0, -10)

[node name="ObjectContainer" type="Node2D" parent="GameArea"]

[node name="LinkDeviceSprite" parent="." instance=ExtResource("2_2w885")]

[connection signal="timeout" from="GameArea/GameTimers/HungerTimer" to="GameArea" method="tickHunger"]
[connection signal="timeout" from="GameArea/GameTimers/JoyTimer" to="GameArea" method="tickJoy"]
[connection signal="timeout" from="GameArea/GameTimers/EvolveTimer" to="GameArea" method="_evolveCheck"]
[connection signal="body_entered" from="GameArea/PetManager/FoodColliders/SpawnCollider0" to="GameArea" method="_foodColliderEntered" binds= [0]]
[connection signal="body_exited" from="GameArea/PetManager/FoodColliders/SpawnCollider0" to="GameArea" method="_foodColliderExited" binds= [0]]
[connection signal="body_entered" from="GameArea/PetManager/FoodColliders/SpawnCollider1" to="GameArea" method="_foodColliderEntered" binds= [1]]
[connection signal="body_exited" from="GameArea/PetManager/FoodColliders/SpawnCollider1" to="GameArea" method="_foodColliderExited" binds= [1]]
[connection signal="body_entered" from="GameArea/PetManager/FoodColliders/SpawnCollider2" to="GameArea" method="_foodColliderEntered" binds= [2]]
[connection signal="body_exited" from="GameArea/PetManager/FoodColliders/SpawnCollider2" to="GameArea" method="_foodColliderExited" binds= [2]]
[connection signal="body_entered" from="GameArea/PetManager/FoodColliders/SpawnCollider3" to="GameArea" method="_foodColliderEntered" binds= [3]]
[connection signal="body_exited" from="GameArea/PetManager/FoodColliders/SpawnCollider3" to="GameArea" method="_foodColliderExited" binds= [3]]

[editable path="GameArea/MenuManager/Menu/MiniMenu/Play"]
[editable path="GameArea/MenuManager/Menu/MiniMenu/Stats"]
[editable path="GameArea/MenuManager/Menu/PlayMenu/GameMenu/Exit"]
[editable path="GameArea/MenuManager/Menu/PlayMenu/GameMenu/Guess"]
[editable path="GameArea/MenuManager/Menu/PlayMenu/GameMenu/Fish"]
[editable path="GameArea/MenuManager/Menu/PlayMenu/GameMenu/Run"]
[editable path="GameArea/MenuManager/Menu/PlayMenu/GameMenu/Hit"]
[editable path="GameArea/MenuManager/Menu/PlayMenu/GameMenu/Endure"]
